
ChangeLog about GNU GLOBAL

**** ** 2001, Shigio Yamaguchi  <shigio@tamacom.com>

	* gtags: format char for strftime() changed (%e -> %d).
	* htags: use gtags --date and gtags --pwd instead of date and pwd.
	  Above changes are for Windows 32 environment.
	* rename file: pathop.[ch] -> gpathop.[ch].
	* rename functions: pathxxx -> gpath_xxx, gtagsxxx -> gtags_xxx.

July 31 2001, Shigio Yamaguchi  <shigio@tamacom.com>

	* VERSION: removed.
	* compat.h: moved to libdb/.
	* machine/: removed.
	* htags: WWW link in hypertext was modified.
	* gtags.c, global.c: rewrite code for putenv(3) using malloc(3).

July 12 2001, Shigio Yamaguchi  <shigio@tamacom.com>

	* config variable HAVE_SNPRINTF and AC_FUNC_ALLOCA added.
	* stop using MAXENVLEN because it brings buffer overflow.
	* htags.pl: the value of id changed from src directory
	  to HTML directory.
	* libutil/conf.c: error check added.
	* libutil/gtagsop.c: replace notnamechar() with isregex().
	* put '#assert' into reserved word.
	* reconf.sh: command for generating configure added.
	* Copyright notice added for short files that are not important
	  enough to worry about copylefting.
	* libdb/db.h: typdefs pgno_t, indx_t and recno_t changed into macros.
	* gctags/{C.c,Cpp.c}: memory violation fixed.
	* libutil/getopt* and libregex/* moved to new libglibc/ directory.

September 26 2000, Shigio Yamaguchi  <shigio@tamacom.com>

	* htags.pl: use generated path of perl for global.cgi.
	* global.1, htags.1, btreeop.1: fix missing .El.
	* make version number 'major.minor.fixed'.

September 3 2000, Shigio Yamaguchi  <shigio@tamacom.com>

	* license changed from BSD-style to GPL.
	* now generated automatically by automake and autoconf.
	* nvi-1.79-gtags.diff: put into the public domain.
	* htags.pl: command path in global.cgi becomes generated
	  at execution time. usable() changed to return path.
	* htags.pl: optimized about temporary database.
	* htags.pl: most code which depend on javascript are removed