@@ -4,7 +4,7 @@ ___________________________________
 |  |   |  |  |  |  |     |     |  |
 |  ~~  |   ~~|     |  ~  |  |  |   ~~|          for all hackers.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- Copyright (c) 2000
+ Copyright (c) 2000, 2001
 	Tama Communications Corporation. All rights reserved.
 
  This file is free software; as a special exception the author gives
@@ -28,5 +28,5 @@ There are also many others who have contributed patches and fixes.
 Please see files ChangeLog and THANKS.
 
 Note: GLOBAL is distributed with the files:
-	regex.c, regex.h, getopt.c, getopt1.c and getopt.h
+	regex.c, regex.h, snprintf.c, getopt.c, getopt1.c and getopt.h
 they are considered a separate package, not part of GLOBAL proper.
