@@ -101,61 +101,33 @@ int	verbose;
 	if (makeobjdir == NULL)
 		setupvariables(verbose);
 
-#ifdef HAVE_SNPRINTF
-	snprintf(path, sizeof(path),
-#else
-	sprintf(path,
-#endif /* HAVE_SNPRINTF */
-		"%s/%s", candidate, dbname(GTAGS));
+	snprintf(path, sizeof(path), "%s/%s", candidate, dbname(GTAGS));
 	if (verbose)
 		fprintf(stderr, "checking %s\n", path);
 	if (test("fr", path)) {
 		if (verbose)
 			fprintf(stderr, "GTAGS found at '%s'.\n", path);
-#ifdef HAVE_SNPRINTF
-		snprintf(dbpath, size,
-#else
-		sprintf(dbpath,
-#endif /* HAVE_SNPRINTF */
-			"%s", candidate);
+		snprintf(dbpath, size, "%s", candidate);
 		return 1;
 	}
-#ifdef HAVE_SNPRINTF
 	snprintf(path, sizeof(path),
-#else
-	sprintf(path,
-#endif /* HAVE_SNPRINTF */
 		"%s/%s/%s", candidate, makeobjdir, dbname(GTAGS));
 	if (verbose)
 		fprintf(stderr, "checking %s\n", path);
 	if (test("fr", path)) {
 		if (verbose)
 			fprintf(stderr, "GTAGS found at '%s'.\n", path);
-#ifdef HAVE_SNPRINTF
-		snprintf(dbpath, size,
-#else
-		sprintf(dbpath,
-#endif /* HAVE_SNPRINTF */
-			"%s/%s", candidate, makeobjdir);
+		snprintf(dbpath, size, "%s/%s", candidate, makeobjdir);
 		return 1;
 	}
-#ifdef HAVE_SNPRINTF
 	snprintf(path, sizeof(path),
-#else
-	sprintf(path,
-#endif /* HAVE_SNPRINTF */
 		"%s%s/%s", makeobjdirprefix, candidate, dbname(GTAGS));
 	if (verbose)
 		fprintf(stderr, "checking %s\n", path);
 	if (test("fr", path)) {
 		if (verbose)
 			fprintf(stderr, "GTAGS found at '%s'.\n", path);
-#ifdef HAVE_SNPRINTF
-		snprintf(dbpath, size,
-#else
-		sprintf(dbpath,
-#endif /* HAVE_SNPRINTF */
-			"%s%s", makeobjdirprefix, candidate);
+		snprintf(dbpath, size, "%s%s", makeobjdirprefix, candidate);
 		return 1;
 	}
 	return 0;
